--- a/Numpy_and_Pandas_for_Beginners.ipynb
+++ b/Numpy_and_Pandas_for_Beginners.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +204,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -228,6 +230,70 @@
     "print(a)\n",
     "print(np.vsplit(a,3)) #Vertically split the array into 3 new arrays\n",
     "print(np.hsplit(a,2)) #Horizontally split the array into 2 new arrays"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color: red\">Pandas for Beginners</h1>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3 style=\"color:blue\">Series</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      1\n",
+      "1    abc\n",
+      "2      6\n",
+      "3    NaN\n",
+      "4     44\n",
+      "5      1\n",
+      "dtype: object\n",
+      "['1' 'abc' '6' 'nan' '44' '1']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "s = pd.Series([1,'abc','6',np.nan,44,1])\n",
+    "a = np.array([1,'abc','6',np.nan,44,1])\n",
+    "\n",
+    "print(s)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " <h3 style=\"color: blue\">DataFrame</h3> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Method one: use array to create DataFrame\n",
+    "\n",
+    "df = pd.DataFrame(np.random)\n",
+    "print(df)"
    ]
   }
  ],
