Scikit-learn Iris

--- a/Python_Scikit-learn.ipynb
+++ b/Python_Scikit-learn.ipynb
@@ -1,13 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<h3 style=\"color: blue\">KNN Classifier - IRIS</h3>\n",
+    "<h4 style=\"color: red\">Processes:</h4>\n",
+    "<ol>\n",
+    "    <li>\n",
+    "        <b>Import module:</b> \n",
+    "        <ul><li>datasets, train_test_split, KNeighborsClassifier</li></ul>\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        <b>Create Data:</b>\n",
+    "        <ul>\n",
+    "            <li>classes, labels</li>\n",
+    "            <li>Data set --> training set/data, testing set/data</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        <b>Create Model:</b>\n",
+    "        <ul>\n",
+    "            <li>fit, predict</li>\n",
+    "        </ul>\n",
+    "    </li>\n",
+    "    <li>\n",
+    "        <b>Visualization</b>\n",
+    "    </li>\n",
+    "</ol>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import datasets\n",
+    "from sklearn.cross_validation import train_test_split"
+   ]
   }
  ],
  "metadata": {
