train_test_split function

--- a/Python_Scikit-learn.ipynb
+++ b/Python_Scikit-learn.ipynb
@@ -33,6 +33,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style=\"color: green\">sklear.cross_validation:</b></h4>\n",
+    "<h5>train_test_split(*array, **options):</h5>\n",
+    "<p>To avoid <b>overfitting</b>, it is common practice when performing a (supervised) machine learning experiment to hold out\n",
+    "part of the available data as a <b>test set</b> <em>X_test, y_test</em>.\n",
+    "<table align='left'>\n",
+    "    <tr style='border: 2px solid black'>\n",
+    "        <th style='text-align: left; border-right: 2px solid black'>Parameters:</th>\n",
+    "        <td>\n",
+    "            <ul style='list-style:none; text-align: left; line-height: 2rem'>\n",
+    "                <li><b>*arrays:</b> Allowed inputs are lists, numpy arrays, scipy-sparse matrices or pandas dataframes</li>\n",
+    "                <li><b>test_size:</b> float, int, None, optional</li>\n",
+    "                <li><b>train_size:</b> float, int, None, default None</li>\n",
+    "                <li><b>random_state:</b> int, RandomState instance or None, optional(default=None)</li>\n",
+    "                <li>\n",
+    "                    <b>shuffle:</b> boolean, optional(default=True)\n",
+    "                    <p style='margin-top: 0; text-indent: 40px'>Whether or not to shuffle the data before splitting. If shuffle=False then stratify must be None.</p>\n",
+    "                </li>\n",
+    "                <li><b>stratify:</b> array-like or None (default is None)</li>\n",
+    "            </ul>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr style='border: 2px solid black'>\n",
+    "        <th style='text-align: left; border-right: 2px solid black'>Returns:</th>\n",
+    "        <td>\n",
+    "            <ul style=\"list-style: none; text-align: left; line-height: 2rem\">\n",
+    "                <li>\n",
+    "                    <b>splitting:</b> list, length=2 * len(arrays)\n",
+    "                    <p style='margin-top: 0; text-indent: 40px'>List containing train-test split of inputs</p>\n",
+    "                </li>\n",
+    "            </ul>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
