--- a/Python_Scikit-learn.ipynb
+++ b/Python_Scikit-learn.ipynb
@@ -81,7 +81,8 @@
    "source": [
     "import numpy as np\n",
     "from sklearn import datasets\n",
-    "from sklearn.cross_validation import train_test_split"
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n"
    ]
   }
  ],
