--- a/Python_Scikit-learn.ipynb
+++ b/Python_Scikit-learn.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "source": [
     "<h4 style=\"color: green\">sklear.cross_validation:</b></h4>\n",
-    "<h5>train_test_split(*array, **options):</h5>\n",
+    "<h5><li>train_test_split(*array, **options):</li></h5>\n",
     "<p>To avoid <b>overfitting</b>, it is common practice when performing a (supervised) machine learning experiment to hold out\n",
     "part of the available data as a <b>test set</b> <em>X_test, y_test</em>.\n",
     "<table align='left'>\n",
@@ -48,7 +48,8 @@
     "                <li><b>*arrays:</b> Allowed inputs are lists, numpy arrays, scipy-sparse matrices or pandas dataframes</li>\n",
     "                <li><b>test_size:</b> float, int, None, optional</li>\n",
     "                <li><b>train_size:</b> float, int, None, default None</li>\n",
-    "                <li><b>random_state:</b> int, RandomState instance or None, optional(default=None)</li>\n",
+    "                <li>\n",
+    "                   <b>random_state:</b> int, RandomState instance or None, optional(default=None)                     </li>\n",
     "                <li>\n",
     "                    <b>shuffle:</b> boolean, optional(default=True)\n",
     "                    <p style='margin-top: 0; text-indent: 40px'>Whether or not to shuffle the data before splitting. If shuffle=False then stratify must be None.</p>\n",
@@ -76,13 +77,213 @@
    "metadata": {},
    "source": [
     "<h4 style='color: green'>sklearn.neighbors:</h4>\n",
-    "<h5>It provides functionality for unsupervised and supervised neighbors-based learning methods.</h5>\n",
+    "<h5>&emsp;It provides functionality for unsupervised and supervised neighbors-based learning methods.</h5>\n",
     "<p>\n",
-    "    <b>Unsupervised nearest neighbors:</b> It's the foundation of many other learning methods, notably        manifold learning and spectral clustering.\n",
+    "    &emsp;(The principle behind nearest neighbor methods is to find a predefined number of training       samples closest in distance to the new point, and predict the label from these.)\n",
     "</p>\n",
     "<p>\n",
-    "    <b>Supervised neighbors-based learning:</b> It comes in two flavors: <em style='color: red'>classification</em> for data with discrete labels, and <em style='color: red'>regression</em> for data with continuous labels.\n",
+    "    &emsp;<b>Unsupervised nearest neighbors:</b> It's the foundation of many other learning methods,       notably manifold learning and spectral clustering.\n",
+    "</p>\n",
+    "<p>\n",
+    "    &emsp;<b>Supervised neighbors-based learning:</b> It comes in two flavors: <em style='color:      red'>classification</em> for data with discrete labels, and <em style='color: red'>regression</em> for data with continuous labels.\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<li>\n",
+    "    <em>sklearn.neighbors.<b>KNeighborsClassifier</b></em>(n_neighbors=5, weights='uniform', algorithm='auto', leaf_size=30, p=2,, metric='minkowski', metric_params=None, n_jobs=1, **kwargs):\n",
+    "</li>\n",
+    "<p>Classifier implementing the k-nearest neighbors vote.</p>\n",
+    "\n",
+    "<table align='left'>\n",
+    "    <tr>\n",
+    "        <th style='border: solid 2px black'>Parameters:</th>\n",
+    "        <td style='text-align: left; border: solid 2px black'>\n",
+    "            <ul style='list-style: none; line-height: 2.5rem'>\n",
+    "                <li>\n",
+    "                    <b>n_neighbors:</b> int, optional (default=5)\n",
+    "                    <br>\n",
+    "                    &nbsp; Number of neighbors to use by default for <em>kneighbors</em> queries.\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>weights:</b> str or callable, optional (default = 'uniform')\n",
+    "                    <br>\n",
+    "                    &nbsp;\n",
+    "                    weight function in prediciton.\n",
+    "                    <ul>\n",
+    "                        <li>'uniform'</li>\n",
+    "                        <li>'distance'</li>\n",
+    "                        <li>[callable]</li>\n",
+    "                    </ul>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>algorithm:</b> {'auto', 'ball_tree', 'kd_tree', 'brute'}, optional\n",
+    "                    <br>\n",
+    "                    &nbsp; \n",
+    "                    Algorithm used to compute the nearest neighbors:\n",
+    "                    <ul>\n",
+    "                        <li>'ball_tree' will use <em>BallTree</em></li>\n",
+    "                        <li>'kd_tree' will use <em>KDTree</em></li>\n",
+    "                        <li>'brute' will use a brute-force search</li>\n",
+    "                        <li>'auto' will attempt to decide the most appropriate algorithm</li>\n",
+    "                    </ul>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>leaf_size:</b> int, optional (default = 30)\n",
+    "                    <br>\n",
+    "                    &nbsp;\n",
+    "                    Leaf size passed to BallTree or KDTree. This can affect the speed of the \n",
+    "                    construction and query, as well as the memory required to store the tree.\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>p:</b> string or callable, default 'minkowski'\n",
+    "                    &nbsp;\n",
+    "                    Power parameter for the Minkowski metric\n",
+    "                    <ul>\n",
+    "                        <li>p = 1: manhattan_distance(l1)</li>\n",
+    "                        <li>p = 2: euclidean_distance(l2)</li>\n",
+    "                        <li>p = arbitrary: minkowski_distance(l_p)</li>\n",
+    "                    </ul>\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>metric:</b> string or callable, default 'minkowski'\n",
+    "                    &nbsp;\n",
+    "                    The distance metric to use for the tree\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>metric_params:</b> dict, optional (default = None)\n",
+    "                    &nbsp;\n",
+    "                    Additional keyword arguments for the metric function\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>n_jobs:</b> int, optional (default = 1)\n",
+    "                    &nbsp;\n",
+    "                    The number of parallel jobs to run for neighbors search\n",
+    "                </li>\n",
+    "            </ul>  \n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style='color:green'>sklearn.prepocessing:</h4>\n",
+    "<h5>\n",
+    "    &emsp;It provides several common utility functions and transformer classes to change raw feature vectors\n",
+    "    into a representation that is more suitable for the downstream estimators.\n",
+    "</h5>\n",
+    "<p>\n",
+    "    &emsp;Learning algorithms benefit from standardization of the data set. (ex: dealing with outliers)\n",
+    "</p>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<li>sklearn.preprocessing.<b>StandardScaler</b>(copy=True, with_mean=True, with_std=True)</li>\n",
+    "<p>&emsp;Standardize features by removing the mean and scalling to unit variance. (normally distributed data, ex: Gaussian with 0 mean and unit variance)</p>\n",
+    "<p>&emsp;Centering and scaling happen independently on each feature by computing the relevant statistics on the samples in the training set. Mean and standard deviation are then stored to be used on later data using the transformer method.</p>\n",
+    "\n",
+    "<table align='left'>\n",
+    "    <tr style='border: solid 2px black'>\n",
+    "        <th style='border: solid 2px black'>Parameters:</th>\n",
+    "        <td>\n",
+    "            <ul style='list-style:none; text-align: left; line-height: 2.5rem'>\n",
+    "                <li>\n",
+    "                    <b>copy:</b> boolean, optional, default True\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>with_mean:</b> boolean, default True\n",
+    "                    <br>\n",
+    "                    &nbsp; \n",
+    "                    If True, center the data before scaling.\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>with_std:</b> boolean, default True\n",
+    "                    <br>\n",
+    "                    &nbsp; \n",
+    "                    If True, scale the data to unit variance (or equivalently, unit standard\n",
+    "                    deviation)\n",
+    "                </li>\n",
+    "            </ul>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "    <tr style='border: solid 2px black'>\n",
+    "        <th style='border: solid 2px black'>Attributes</th>\n",
+    "        <td>\n",
+    "            <ul style='list-style: none; text-align: left; line-height: 2.5rem'>\n",
+    "                <li>\n",
+    "                    <b>scale_:</b> ndarray, shape[n_features]\n",
+    "                    <br>\n",
+    "                    &nbsp;\n",
+    "                    Per feature relative scaling of the data\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>mean_:</b> array of floats with shape [n_features]\n",
+    "                    <br>\n",
+    "                    &nbsp;\n",
+    "                    The mean value for each feature in the training set.\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>var_:</b> array of floats with shape [n_features]\n",
+    "                    <br>\n",
+    "                    &nbsp;\n",
+    "                    The variance for each feature in the training set\n",
+    "                </li>\n",
+    "                <li>\n",
+    "                    <b>n_samples_seen:</b> int\n",
+    "                    <br>\n",
+    "                    &nbsp;\n",
+    "                    The number of samples processed by the estimator.\n",
+    "                </li>\n",
+    "            </ul>\n",
+    "        </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn import datasets\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['setosa' 'versicolor' 'virginica']\n",
+      "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n"
+     ]
+    }
+   ],
+   "source": [
+    "iris = datasets.load_iris()\n",
+    "# print(iris)\n",
+    "print(iris.target_names)\n",
+    "print(iris.feature_names)\n",
+    "iris_X = iris.data\n",
+    "iris_y = iris.target\n"
    ]
   },
   {
@@ -93,10 +294,7 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "from sklearn import datasets\n",
-    "from sklearn.cross_validation import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n"
+    "X_train, X_test, y_train, y_test = train_test_split(iris_X, iris_y, test_size=0.3)\n"
    ]
   }
  ],
