--- a/Python_Scikit-learn.ipynb
+++ b/Python_Scikit-learn.ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "source": [
     "<li>sklearn.preprocessing.<b>StandardScaler</b>(copy=True, with_mean=True, with_std=True)</li>\n",
-    "<p>&emsp;Standardize features by removing the mean and scalling to unit variance. (normally distributed data, ex: Gaussian with 0 mean and unit variance)</p>\n",
+    "<p>&emsp;Standardize features by removing the mean and scalling to unit variance. (normally distributed data, ex: <b style='color: red'>Gaussian with 0 mean and unit variance</b>,(X-X_mean)/X_std)</p>\n",
     "<p>&emsp;Centering and scaling happen independently on each feature by computing the relevant statistics on the samples in the training set. Mean and standard deviation are then stored to be used on later data using the transformer method.</p>\n",
     "\n",
     "<table align='left'>\n",
@@ -220,19 +220,19 @@
     "        <td>\n",
     "            <ul style='list-style: none; text-align: left; line-height: 2.5rem'>\n",
     "                <li>\n",
-    "                    <b>scale_:</b> ndarray, shape[n_features]\n",
+    "                    <b>scale<u style='white-space: pre'>  </u>:</b> ndarray, shape[n<u> </u>features]\n",
     "                    <br>\n",
     "                    &nbsp;\n",
     "                    Per feature relative scaling of the data\n",
     "                </li>\n",
     "                <li>\n",
-    "                    <b>mean_:</b> array of floats with shape [n_features]\n",
+    "                    <b>mean<u style='white-space: pre'>  </u>:</b> array of floats with shape [n<u> </u>features]\n",
     "                    <br>\n",
     "                    &nbsp;\n",
     "                    The mean value for each feature in the training set.\n",
     "                </li>\n",
     "                <li>\n",
-    "                    <b>var_:</b> array of floats with shape [n_features]\n",
+    "                    <b>var<u style='white-space: pre'>  </u>:</b> array of floats with shape [n<u> </u>features]\n",
     "                    <br>\n",
     "                    &nbsp;\n",
     "                    The variance for each feature in the training set\n",
@@ -251,8 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -265,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +275,9 @@
      "output_type": "stream",
      "text": [
       "['setosa' 'versicolor' 'virginica']\n",
-      "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n"
+      "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
+      "150\n",
+      "150\n"
      ]
     }
    ],
@@ -283,18 +287,176 @@
     "print(iris.target_names)\n",
     "print(iris.feature_names)\n",
     "iris_X = iris.data\n",
-    "iris_y = iris.target\n"
+    "iris_y = iris.target\n",
+    "print(len(iris_X))\n",
+    "print(len(iris_y))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "105\n",
+      "105\n"
+     ]
+    }
+   ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(iris_X, iris_y, test_size=0.3)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(iris_X, iris_y, test_size=0.3)\n",
+    "print(len(X_train))\n",
+    "# print(X_train)\n",
+    "print(len(y_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.87333333  3.10952381  3.75619048  1.19428571]\n",
+      "[ 5.87333333  3.10952381  3.75619048  1.19428571]\n",
+      "[ 0.67643175  0.1926712   3.18265215  0.58396735]\n",
+      "[ 0.82245471  0.43894328  1.78399892  0.76417756]\n",
+      "[ 0.82245471  0.43894328  1.78399892  0.76417756]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Standardize\n",
+    "sc = StandardScaler()\n",
+    "sc.fit(X_train)\n",
+    "\n",
+    "# X_train's mean values of each feature\n",
+    "X_train_mean = X_train.mean(axis=0)\n",
+    "print(X_train_mean)\n",
+    "print(sc.mean_)\n",
+    "\n",
+    "# X_train's variance for each feature\n",
+    "print(sc.var_)\n",
+    "\n",
+    "# X_train's standard deviation of each feature\n",
+    "X_train_std = X_train.std(axis=0)\n",
+    "print(X_train_std)\n",
+    "print(sc.scale_)\n",
+    "\n",
+    "# transform X_train and X_test\n",
+    "X_train_standard = sc.transform(X_train)\n",
+    "X_test_standard = sc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=5, p=2,\n",
+      "           weights='uniform')\n",
+      "45\n",
+      "[2 0 2 1 0 0 1 1 2 0 0 1 1 1 1 2 2 0 2 0 1 2 2 1 0 2 2 0 0 0 2 0 1 2 1 1 1\n",
+      " 1 2 1 2 0 1 0 0]\n",
+      "[1 0 2 2 0 0 1 1 2 0 0 1 2 1 1 2 2 0 2 0 2 1 2 1 0 2 2 0 0 0 2 0 1 2 1 2 1\n",
+      " 1 2 1 2 0 1 0 0]\n",
+      "[ True False False  True False False False False False False False False\n",
+      "  True False False False False False False False  True  True False False\n",
+      " False False False False False False False False False False False  True\n",
+      " False False False False False False False False False]\n",
+      "Misclassified samples: 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "knn = KNeighborsClassifier()\n",
+    "# Fit the module using X as training data and y as target values\n",
+    "knn.fit(X_train_standard, y_train)\n",
+    "print(knn.fit(X_train_standard, y_train))\n",
+    "\n",
+    "# Predict the class labels for the provided data\n",
+    "y_predict = knn.predict(X_test_standard)\n",
+    "print(len(y_predict))\n",
+    "print(y_predict)\n",
+    "\n",
+    "#compare y_predict and y_test\n",
+    "print(y_test)\n",
+    "print(y_test!=y_predict)\n",
+    "print('Misclassified samples: %d'%(y_test!=y_predict).sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAD8CAYAAABw1c+bAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFWNJREFUeJzt3W+MXfWd3/H3J+MxBtZyunhCkI0DTS1lkzaw6MoggjYg\nLVlDN3Ii8cAoSrRRVg5pkXarKhLlAZFaaZ9EqqqkJKybWghpY1SRwForCAnbVVkFkXhsOfwLZCde\nUmaEwsSkDgEbe5xvH8xxcj3YzBn73vnDeb+kK9/z+/3OOd97+fGZM+eeOydVhSSpO9611AVIkhaX\nwS9JHWPwS1LHGPyS1DEGvyR1jMEvSR1j8EtSxxj8ktQxBr8kdcyqpS7gdNavX1+XXXbZUpchSSvG\nvn37flFVY23GLsvgv+yyyxgfH1/qMiRpxUjys7ZjPdUjSR1j8EtSxxj8ktQxBr8kdYzBL0kdY/BL\nUsfMG/xJLk3yD0meS/Jskr84zZgk+UqSiSRPJbmqr29rkheavjsG/QIkSQvT5jr+GeA/VtX+JGuB\nfUm+V1XP9Y25CdjcPK4Gvg5cnWQEuBu4EZgE9ibZM2ddadl7YmKaB/ZP8vPDR7l43RpuuWoj1/6r\nVt+Vkd7WnQ8c4KEfTXH0OKwZhU9csYG/uuXKoe5z3iP+qnq5qvY3z18DfgxsmDNsG3BfzXoSeHeS\nS4AtwERVHayqY8D9zVhpxXhiYpqv/v0/8caRGTa++3zeODLDV//+n3hiYnqpS9MKd+cDB9g9PsWx\n47B6BI4dh93jU9z5wIGh7ndB5/iTXAb8IfCDOV0bgJf6liebtjO1SyvGA/snWbdmlIvWrmHVyAgX\nrV3DujWjPLB/cqlL0wr30I+mGAHOP28Vo6tWcf55qxhp2oepdfAn+T3gW8BfVtWvBl1Ikh1JxpOM\nT097JKXl4+eHj7LugtFT2tZdMMrPDx9door0TnH0OKwaObVt1chs+zC1Cv4ko8yG/t9U1bdPM2QK\nuLRveWPTdqb2t6iqnVXVq6re2JjnTrV8XLxuDYffOPX/xMNvHOfidWuWqCK9U6wZhZkTp7bNnJht\nH6Y2V/UE+J/Aj6vqv55h2B7gM83VPdcAh6vqZWAvsDnJ5UlWA9ubsdKKcctVGzl89DiHXjvKzIkT\nHHrtKIePHueWqzYudWla4T5xxQZOAEfenOH4zAxH3pzhRNM+TG2u6vkI8Gng6SQnP3G4E9gEUFX3\nAA8DNwMTwBvAZ5u+mSS3A48CI8Cuqnp2oK9AGrKTV+88sH+Syf93hIvXreEzH7nMq3p0zk5evbPY\nV/Wkqoa6g7PR6/XKP8ssSe0l2VdVvTZj/eauJHWMwS9JHWPwS1LHGPyS1DEGvyR1jMEvSR1j8EtS\nxxj8ktQxBr8kdYzBL0kdY/BLUscY/JLUMQa/JHWMwS9JHWPwS1LHzHsjliS7gD8FXqmqf32a/i8C\nn+rb3h8AY1X1apIXgdeAE8BM278VLUkanjZH/PcCW8/UWVVfrqorq+pK4D8B/6eqXu0bckPTb+hL\n0jIwb/BX1ePAq/ONa9wK7D6niiRJQzWwc/xJLmD2N4Nv9TUX8FiSfUl2DGpfkqSz1+Zm6219HPj+\nnNM811XVVJL3AN9L8nzzG8RbND8YdgBs2rRpgGVJkvoN8qqe7cw5zVNVU82/rwAPAlvOtHJV7ayq\nXlX1xsbGBliWJKnfQII/yTrgo8Df9rVdmGTtyefAx4BnBrE/SdLZa3M5527gemB9kkngS8AoQFXd\n0wz7JPDdqnq9b9WLgQeTnNzPN6vqO4MrXZJ0NuYN/qq6tcWYe5m97LO/7SBwxdkWJkkaDr+5K0kd\nY/BLUscY/JLUMQa/JHWMwS9JHWPwS1LHGPyS1DEGvyR1jMEvSR1j8EtSxxj8ktQxBr8kdYzBL0kd\nY/BLUscY/JLUMQa/JHXMvMGfZFeSV5Kc9raJSa5PcjjJgeZxV1/f1iQvJJlIcscgC5cknZ02R/z3\nAlvnGfOPVXVl8/jPAElGgLuBm4APArcm+eC5FCtJOnfzBn9VPQ68ehbb3gJMVNXBqjoG3A9sO4vt\nSJIGaFDn+K9N8lSSR5J8qGnbALzUN2ayaTutJDuSjCcZn56eHlBZkqS5BhH8+4FNVfVh4KvAQ2ez\nkaraWVW9quqNjY0NoCxJ0umcc/BX1a+q6tfN84eB0STrgSng0r6hG5s2SdISOufgT/LeJGmeb2m2\neQjYC2xOcnmS1cB2YM+57k+SdG5WzTcgyW7gemB9kkngS8AoQFXdA9wCfCHJDHAE2F5VBcwkuR14\nFBgBdlXVs0N5FZKk1jKb0ctLr9er8fHxpS5DklaMJPuqqtdmrN/claSOMfglqWMMfknqGINfkjrG\n4JekjjH4JaljDH5J6hiDX5I6xuCXpI4x+CWpYwx+SeoYg1+SOsbgl6SOMfglqWMMfknqmHmDP8mu\nJK8keeYM/Z9qbrT+dJInklzR1/di034giX9gX5KWgTZH/PcCW9+m/5+Bj1bVvwH+C7BzTv8NVXVl\n2xsESJKGa95bL1bV40kue5v+J/oWn2T2puqSpGVq0Of4Pwc80rdcwGNJ9iXZMeB9SZLOwrxH/G0l\nuYHZ4L+ur/m6qppK8h7ge0mer6rHz7D+DmAHwKZNmwZVliRpjoEc8Sf5MPANYFtVHTrZXlVTzb+v\nAA8CW860jaraWVW9quqNjY0NoixJ0mmcc/An2QR8G/h0Vf2kr/3CJGtPPgc+Bpz2yiBJ0uKZ91RP\nkt3A9cD6JJPAl4BRgKq6B7gLuAj4WhKAmeYKnouBB5u2VcA3q+o7Q3gNkqQFaHNVz63z9P858Oen\naT8IXPHWNSRJS8lv7kpSxxj8ktQxBr8kdYzBL0kdY/BLUscY/JLUMQa/JHWMwS9JHWPwS1LHGPyS\n1DEGvyR1jMEvSR1j8EtSxxj8ktQxBr8kdcy8wZ9kV5JXkpz27lmZ9ZUkE0meSnJVX9/WJC80fXcM\nsnBJ0tlpc7P1e4H/Dtx3hv6bgM3N42rg68DVSUaAu4EbgUlgb5I9VfXcuRYtLbY7HzjAQz+a4uhx\nWDMKn7hiA391y5VLXZbeAX526HWe/Okhpl87ytjaNVzz/ot430UXDnWf8x7xV9XjwKtvM2QbcF/N\nehJ4d5JLmL2x+kRVHayqY8D9zVhpRbnzgQPsHp/i2HFYPQLHjsPu8SnufODAUpemFe5nh17nof2T\nHDk2wyXrzufIsRke2j/Jzw69PtT9DuIc/wbgpb7lyabtTO3SivLQj6YYAc4/bxWjq1Zx/nmrGGna\npXPx5E8Pse78UdZdcB7vete7WHfBeaw7f5Qnf3poqPtdNh/uJtmRZDzJ+PT09FKXI/3W0eOwauTU\ntlUjs+3SuZh+7Shr14ye0rZ2zSjTrx0d6n4HEfxTwKV9yxubtjO1n1ZV7ayqXlX1xsbGBlCWNBhr\nRmHmxKltMydm26VzMbZ2Da/NOYJ47ehxxtauGep+BxH8e4DPNFf3XAMcrqqXgb3A5iSXJ1kNbG/G\nSivKJ67YwAngyJszHJ+Z4cibM5xo2qVzcc37L+LwkeMcfuNNfvOb33D4jTc5fOQ417z/oqHud96r\nepLsBq4H1ieZBL4EjAJU1T3Aw8DNwATwBvDZpm8mye3Ao8AIsKuqnh3Ca5CG6uTVO17Vo0F730UX\n8omrNvLkTw/x8uEjjK1dww1/cPHQr+pJVQ11B2ej1+vV+Pj4UpchSStGkn1V1Wszdtl8uCtJWhwG\nvyR1jMEvSR1j8EtSxxj8ktQxBr8kdYzBL0kdY/BLUscY/JLUMQa/JHWMwS9JHWPwS1LHGPyS1DEG\nvyR1jMEvSR1j8EtSx7QK/iRbk7yQZCLJHafp/2KSA83jmSQnkvx+0/dikqebPu+uIklLrM2tF0eA\nu4EbgUlgb5I9VfXcyTFV9WXgy834jwP/oape7dvMDVX1i4FWLkk6K22O+LcAE1V1sKqOAfcD295m\n/K3A7kEUJ0kavDbBvwF4qW95sml7iyQXAFuBb/U1F/BYkn1JdpxpJ0l2JBlPMj49Pd2iLEnS2Rj0\nh7sfB74/5zTPdVV1JXAT8O+T/NHpVqyqnVXVq6re2NjYgMuSJJ3UJvingEv7ljc2baeznTmneapq\nqvn3FeBBZk8dSZKWSJvg3wtsTnJ5ktXMhvueuYOSrAM+CvxtX9uFSdaefA58DHhmEIVLks7OvFf1\nVNVMktuBR4ERYFdVPZvktqb/nmboJ4HvVtXrfatfDDyY5OS+vllV3xnkC5AkLUyqaqlreIter1fj\n417yL0ltJdlXVb02Y/3mriR1jMEvSR1j8EtSxxj8ktQxBr8kdYzBL0kdY/BLUscY/JLUMQa/JHWM\nwS9JHWPwS1LHGPyS1DEGvyR1jMEvSR1j8EtSx7QK/iRbk7yQZCLJHafpvz7J4SQHmsddbdeVJC2u\nee/AlWQEuBu4EZgE9ibZU1XPzRn6j1X1p2e5riRpkbQ54t8CTFTVwao6BtwPbGu5/XNZV5I0BG2C\nfwPwUt/yZNM217VJnkrySJIPLXBdSdIimfdUT0v7gU1V9eskNwMPAZsXsoEkO4AdAJs2bRpQWZKk\nudoc8U8Bl/Ytb2zafquqflVVv26ePwyMJlnfZt2+beysql5V9cbGxhbwEiRJC9Em+PcCm5NcnmQ1\nsB3Y0z8gyXuTpHm+pdnuoTbrSpIW17yneqpqJsntwKPACLCrqp5NclvTfw9wC/CFJDPAEWB7VRVw\n2nWH9FokSS1kNp+Xl16vV+Pj40tdhiStGEn2VVWvzVi/uStJHWPwS1LHGPyS1DEGvyR1jMEvSR1j\n8EtSxxj8ktQxBr8kdYzBL0kdY/BLUscY/JLUMQa/JHWMwS9JHWPwS1LHGPyS1DEGvyR1TKvgT7I1\nyQtJJpLccZr+TyV5KsnTSZ5IckVf34tN+4Ek3l1FkpbYvLdeTDIC3A3cCEwCe5Psqarn+ob9M/DR\nqvplkpuAncDVff03VNUvBli3JOkstTni3wJMVNXBqjoG3A9s6x9QVU9U1S+bxSeBjYMtU5I0KG2C\nfwPwUt/yZNN2Jp8DHulbLuCxJPuS7DjTSkl2JBlPMj49Pd2iLEnS2Zj3VM9CJLmB2eC/rq/5uqqa\nSvIe4HtJnq+qx+euW1U7mT1FRK/XW353gJekd4g2R/xTwKV9yxubtlMk+TDwDWBbVR062V5VU82/\nrwAPMnvqSJK0RNoE/15gc5LLk6wGtgN7+gck2QR8G/h0Vf2kr/3CJGtPPgc+BjwzqOIlSQs376me\nqppJcjvwKDAC7KqqZ5Pc1vTfA9wFXAR8LQnATFX1gIuBB5u2VcA3q+o7Q3klkqRWUrX8Tqf3er0a\nH/eSf0lqK8m+5oB7Xn5zV5I6xuCXpI4x+CWpYwx+SeoYg1+SOsbgl6SOMfglqWMMfknqGINfkjrG\n4JekjjH4JaljDH5J6hiDX5I6xuCXpI4x+CWpY1oFf5KtSV5IMpHkjtP0J8lXmv6nklzVdl1J0uKa\n9w5cSUaAu4EbgUlgb5I9VfVc37CbgM3N42rg68DVLdcdmM/f+0Mee36aE8zeKuyPPzDGX/+Zt/iV\npH5tjvi3ABNVdbCqjgH3A9vmjNkG3FezngTeneSSlusOxOfv/SGPNqEf4ATw6PPTfP7eHw5jd5K0\nYrUJ/g3AS33Lk01bmzFt1h2Ix56fBmD1SBgdCatHckq7JGnWsvlwN8mOJONJxqenFx7WJ4/0T9lm\n0y5J+p02wT8FXNq3vLFpazOmzboAVNXOqupVVW9sbKxFWacaAebeNr6adknS77QJ/r3A5iSXJ1kN\nbAf2zBmzB/hMc3XPNcDhqnq55boD8ccfmP1hcexEcfxEcexEndIuSZo1b/BX1QxwO/Ao8GPgf1XV\ns0luS3JbM+xh4CAwAfwP4N+93boDfxXAX//ZFv7kA2O/PfIfAf7Eq3ok6S1SNfcEydLr9Xo1Pj6+\n1GVI0oqRZF9V9dqMXTYf7kqSFofBL0kdY/BLUscY/JLUMQa/JHWMwS9JHbMsL+dMMg387Bw2sR74\nxYDKGSTram851gTWtRDLsSZ459b1vqpq9Y3VZRn85yrJeNvrWReTdbW3HGsC61qI5VgTWBd4qkeS\nOsfgl6SOeacG/86lLuAMrKu95VgTWNdCLMeawLremef4JUln9k494pckncGKC/4kW5O8kGQiyR2n\n6U+SrzT9TyW5qu26Q6zpU00tTyd5IskVfX0vNu0Hkgz0T5K2qOv6JIebfR9IclfbdYdc1xf7anom\nyYkkv9/0DeX9SrIryStJnjlD/6LPq5Z1LfrcalHTUs2r+epainl1aZJ/SPJckmeT/MVpxiz+3Kqq\nFfNg9s/s/xT4l8Bq4EfAB+eMuRl4hNk7L14D/KDtukOs6VrgXzTPbzpZU7P8IrB+id6r64G/O5t1\nh1nXnPEfB/73IrxffwRcBTxzhv5FnVcLqGsp5tZ8NS36vGpT1xLNq0uAq5rna4GfLHVmVdWKO+Lf\nAkxU1cGqOgbcD2ybM2YbcF/NehJ4d5JLWq47lJqq6omq+mWz+CSzt6ActnN5vcN6r85m27cCuwe0\n7zOqqseBV99myGLPq1Z1LcXcavFencmSvldzLNa8ermq9jfPX2P2hlQb5gxb9Lm10oJ/A/BS3/Ik\nb30TzzSmzbrDqqnf55j96X5SAY8l2ZdkxwDqWWhd1za/Xj6S5EMLXHeYdZHkAmAr8K2+5mG9X/NZ\n7Hl1NhZrbrWx2POqtaWaV0kuA/4Q+MGcrkWfW6sGsRG1k+QGZv/nvK6v+bqqmkryHuB7SZ5vjlwW\nw35gU1X9OsnNwEPA5kXadxsfB75fVf1HcUv5fi1by2xuOa/mSPJ7zP6g+cuq+tWgtnu2VtoR/xRw\nad/yxqatzZg26w6rJpJ8GPgGsK2qDp1sr6qp5t9XgAeZ/fVuEOatq6p+VVW/bp4/DIwmWd9m3WHW\n1Wc7c34dH+L7NZ/FnletLcHceltLNK8WYlHnVZJRZkP/b6rq26cZsvhza9AfZgzzwexvKAeBy/nd\nhx0fmjPm33LqByU/bLvuEGvaxOyN6K+d034hsLbv+RPA1kV8r97L777LsQX4v837NpT3aiH/HYB1\nzJ6vvXAx3q9mm5dx5g8sF3VeLaCuRZ9bLWpa9HnVpq6lmFfN674P+G9vM2bR59aKOtVTVTNJbgce\nZfYT711V9WyS25r+e4CHmf2UfAJ4A/js2627SDXdBVwEfC0JwEzN/jGmi4EHm7ZVwDer6jvnWtMC\n6roF+EKSGeAIsL1mZ9xQ3qsF1AXwSeC7VfV63+pDe7+S7Gb2apT1SSaBLwGjfTUt6rxaQF2LPrda\n1LTo86plXbDI8wr4CPBp4OkkB5q2O5n9gb1kc8tv7kpSx6y0c/ySpHNk8EtSxxj8ktQxBr8kdYzB\nL0kdY/BLUscY/JLUMQa/JHXM/wdpkKbxUcpBsQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xbcbbf30>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Visualization\n",
+    "plt.scatter(y_predict, y_test, alpha=0.2)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n",
+      "1\n",
+      "<class 'numpy.ndarray'>\n",
+      "1 2\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-67-2f7ff1b3203a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mindex_diff\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_predict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m     \u001b[0marray_diff\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_predict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marray_diff\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'append'"
+     ]
+    }
+   ],
+   "source": [
+    "index_diff = np.where(y_test!=y_predict)\n",
+    "array_diff = np.array([])\n",
+    "print(type(index_diff))\n",
+    "print(len(index_diff))\n",
+    "print(type(index_diff[0]))\n",
+    "\n",
+    "for i in index_diff[0]:\n",
+    "    print(y_test[i], y_predict[i])\n",
+    "    np.append(array_diff, [[y_test[i], y_predict[i]]])\n",
+    "    print(array_diff)\n",
+    "    \n",
+    "# for i in np"
    ]
   }
  ],
