--- a/Python_Scikit-learn_NBA_unsupervised.ipynb
+++ b/Python_Scikit-learn_NBA_unsupervised.ipynb
@@ -30,13 +30,198 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<h4 style='color: red'>sklearn.metrics:</h4>\n",
+    "<p>The <em>sklearn.metrics</em> module includes score functions, performance metrics and pairwise\n",
+    "metrics and distance computations</p>\n",
+    "\n",
+    "<p style='color: blue'>sklearn.metrics.<b>silhouette_samples</b>(X, labels, metric='euclidean', **kwds)</p>\n",
+    "<p>Compute the Silhouette Coefficient for each sample.</p>\n",
+    "    \n",
+    "<p>The Silhouette Coefficient is a measure of how well samples are clustered with the samples  that are similar to themselves.</p>\n",
+    "    \n",
+    "<p>Clustering models with high Silhouette Coefficient are said to be dense, where samples in the same cluster are similiar to each other, and well separated, where samples in different clusters are  not very similar to each other.</p>\n",
+    "\n",
+    "<p>The Silhouette Coefficient is calculated using the mean intra-cluster distance (<mark>a</mark>) and the mean nearest-cluster distance (<mark>b</mark>) for each sample. The Silhouette Coefficient for a sample is <mark>(b-a)/max(a,b)</mark>."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# import packages\n",
+    "from sklearn import datasets\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_samples\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from scipy.spatial.distance import pdist,squareform\n",
+    "from scipy.cluster.hierarchy import linkage\n",
+    "from scipy.cluster.hierarchy import dendrogram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['PLAYER', 'Conference', 'MIN', 'PTS', 'FGM', 'FGA', 'FG%', '3PM', '3PA',\n",
+      "       '3P%', 'FTM', 'FTA', 'FT%', 'OREB', 'DREB', 'REB', 'AST', 'TOV', 'STL',\n",
+      "       'BLK', 'PF', 'DD2', 'TD3', '+/-'],\n",
+      "      dtype='object')\n",
+      "      MIN   PTS   FGM   FGA   FG%  3PM  3PA   3P%  FTM  FTA ...   DREB   REB  \\\n",
+      "0     7.4   2.2   0.8   1.9  40.5  0.2  0.5  50.0  0.4  0.9 ...    1.3   1.6   \n",
+      "1    13.7   5.0   1.9   4.6  40.3  0.7  2.0  37.5  0.5  0.6 ...    0.8   1.1   \n",
+      "2    28.7  12.7   4.9  10.8  45.4  1.0  3.3  28.8  2.0  2.7 ...    3.6   5.1   \n",
+      "3     3.3   0.2   0.0   0.8   0.0  0.0  0.4   0.0  0.2  0.4 ...    0.6   0.6   \n",
+      "4     7.5   3.5   1.3   3.0  42.6  0.2  0.8  20.0  0.8  1.1 ...    1.3   1.8   \n",
+      "5    32.3  14.0   5.6  11.8  47.3  1.3  3.6  35.5  1.6  2.0 ...    5.4   6.8   \n",
+      "6    14.1   8.1   3.6   7.1  49.9  0.0  0.0   0.0  1.0  1.3 ...    3.1   4.2   \n",
+      "7    29.1   8.7   3.0   7.6  39.3  1.1  3.5  33.0  1.6  2.2 ...    6.1   7.4   \n",
+      "8    10.3   2.9   1.0   2.7  37.5  0.5  1.5  31.8  0.4  0.5 ...    0.7   0.8   \n",
+      "9    15.1   7.4   2.9   5.7  51.7  0.0  0.0   0.0  1.5  2.4 ...    4.2   6.2   \n",
+      "10   15.5   6.7   2.4   5.9  39.9  0.6  1.8  32.9  1.4  1.9 ...    2.5   2.9   \n",
+      "11   15.5   6.0   2.0   5.0  39.3  1.4  3.6  38.1  0.6  0.7 ...    1.0   1.3   \n",
+      "12   20.3   8.0   3.0   6.0  49.7  0.0  0.2  25.0  1.9  2.7 ...    4.6   6.6   \n",
+      "13   26.1  10.7   4.2   9.0  46.3  1.0  3.2  31.6  1.3  1.7 ...    3.0   4.8   \n",
+      "14   15.0   5.3   2.3   4.6  50.0  0.0  0.1   0.0  0.7  1.0 ...    3.4   4.5   \n",
+      "15   28.5  10.7   3.8   8.2  46.8  1.7  3.8  44.4  1.3  1.6 ...    2.6   2.9   \n",
+      "16    6.9   0.8   0.2   1.1  21.4  0.0  0.2   0.0  0.4  0.7 ...    0.8   1.2   \n",
+      "17   20.1   6.5   2.7   4.6  57.6  0.3  0.8  40.9  0.8  1.3 ...    3.1   4.6   \n",
+      "18    6.6   1.3   0.4   1.0  35.7  0.0  0.0   0.0  0.6  0.8 ...    1.1   1.9   \n",
+      "19   29.7  13.6   6.0  11.2  53.0  0.0  0.1  28.6  1.7  4.4 ...    9.5  13.8   \n",
+      "20   26.3   7.6   2.9   5.5  52.8  0.8  2.3  36.2  0.9  1.3 ...    3.3   4.0   \n",
+      "21   30.1   6.6   2.7   5.9  46.4  0.6  2.3  24.5  0.6  1.4 ...    3.9   5.1   \n",
+      "22   21.6   2.9   1.4   3.0  46.9  0.0  0.0   0.0  0.1  0.4 ...    6.0   8.1   \n",
+      "23   20.5   5.9   1.6   5.0  32.5  0.6  2.2  27.6  2.1  2.7 ...    1.6   1.9   \n",
+      "24    9.0   2.6   1.1   2.9  38.7  0.1  0.7  18.5  0.2  0.4 ...    1.2   1.6   \n",
+      "25   37.2  23.6   8.6  19.1  45.2  1.3  3.5  35.6  5.0  6.6 ...    2.8   4.0   \n",
+      "26   11.5   5.0   1.7   4.0  41.3  0.6  2.1  27.1  1.1  1.6 ...    2.3   3.4   \n",
+      "27   14.5   3.9   1.6   4.5  36.0  0.6  2.5  25.9  0.0  0.0 ...    2.3   3.0   \n",
+      "28   36.1  28.0  10.3  20.3  50.5  0.5  1.8  29.9  6.9  8.6 ...    9.5  11.8   \n",
+      "29   14.6   5.5   2.0   5.1  38.9  0.8  2.7  30.8  0.7  0.8 ...    0.4   0.6   \n",
+      "..    ...   ...   ...   ...   ...  ...  ...   ...  ...  ... ...    ...   ...   \n",
+      "456  12.3   5.0   2.0   4.5  45.5  0.5  1.2  44.3  0.4  0.5 ...    0.7   0.8   \n",
+      "457  16.3   6.2   2.2   6.2  36.2  0.9  2.9  31.9  0.8  1.1 ...    2.6   3.3   \n",
+      "458  30.0   8.1   3.4   5.6  60.0  0.0  0.0   0.0  1.4  2.7 ...    5.5   9.2   \n",
+      "459  17.7   8.2   2.8   7.4  37.4  2.1  5.3  38.9  0.6  0.8 ...    1.2   1.5   \n",
+      "460  18.6   6.2   2.4   5.6  43.7  0.6  2.1  29.0  0.7  1.1 ...    1.8   2.3   \n",
+      "461  25.1   9.9   3.4   7.6  45.4  0.5  1.7  28.8  2.5  3.1 ...    2.0   2.6   \n",
+      "462  11.1   4.3   1.7   3.9  43.3  0.5  1.3  38.6  0.4  0.5 ...    0.7   0.8   \n",
+      "463  29.8  13.7   4.9  11.3  43.3  1.3  3.4  37.2  2.7  3.5 ...    3.3   4.0   \n",
+      "464  18.4   7.3   3.0   7.2  42.1  0.3  1.3  26.6  0.9  1.2 ...    1.2   1.6   \n",
+      "465  10.3   3.5   1.5   3.1  49.4  0.0  0.0   0.0  0.4  0.8 ...    1.6   2.4   \n",
+      "466  19.7  10.3   3.8   9.3  40.5  1.1  3.0  35.6  1.7  2.3 ...    3.1   3.4   \n",
+      "467  27.6   8.4   3.3   4.9  67.1  0.0  0.0   0.0  1.9  2.6 ...    8.2  11.5   \n",
+      "468  12.9   3.5   1.3   3.0  41.4  0.4  1.2  35.6  0.6  0.7 ...    1.0   1.1   \n",
+      "469   8.1   1.9   0.7   1.4  47.8  0.0  0.2   0.0  0.6  0.9 ...    1.8   2.3   \n",
+      "470  33.2  15.9   6.1  13.9  44.2  1.9  5.3  36.1  1.7  2.3 ...    3.8   4.3   \n",
+      "471  24.7   8.0   2.6   6.7  39.4  1.5  4.1  37.8  1.2  1.6 ...    2.6   3.1   \n",
+      "472  12.3   3.2   1.1   3.5  31.3  0.1  0.7  13.6  0.9  1.1 ...    1.1   1.4   \n",
+      "473  24.2  10.5   3.7   9.0  41.6  2.4  6.4  37.8  0.6  0.7 ...    1.8   2.1   \n",
+      "474  16.9   5.1   1.8   4.1  43.1  0.5  2.0  25.0  1.0  1.6 ...    1.1   1.1   \n",
+      "475  11.9   2.7   1.1   2.9  36.5  0.4  1.7  24.6  0.2  0.3 ...    2.3   2.7   \n",
+      "476  34.2  13.5   4.6  11.6  39.3  2.4  6.6  36.3  2.0  2.5 ...    3.3   3.5   \n",
+      "477  28.4  13.7   4.9  11.1  44.3  1.5  3.9  37.0  2.4  3.2 ...    3.4   4.3   \n",
+      "478  18.9   8.1   3.4   6.4  53.0  0.0  0.0   0.0  1.3  2.0 ...    3.4   4.5   \n",
+      "479  14.5   5.3   2.3   4.0  56.8  0.0  0.1  25.0  0.7  1.2 ...    2.9   4.7   \n",
+      "480  18.4   8.2   3.4   6.5  52.9  0.1  0.2  26.7  1.3  1.7 ...    4.6   7.0   \n",
+      "481  30.9  15.7   6.1  13.2  46.1  1.5  4.6  33.7  2.0  2.7 ...    5.0   6.5   \n",
+      "482  26.0  10.0   3.5   8.6  40.6  1.5  3.8  38.6  1.6  1.9 ...    2.0   2.4   \n",
+      "483  37.2  18.9   6.9  15.1  45.9  2.6  6.6  38.7  2.5  3.0 ...    3.0   3.4   \n",
+      "484  24.5  14.1   5.9  13.2  44.9  0.3  1.3  22.3  1.9  2.6 ...    5.7   8.2   \n",
+      "485  18.1   6.1   2.3   4.4  53.4  0.0  0.0   0.0  1.4  1.8 ...    3.9   5.9   \n",
+      "\n",
+      "     AST  TOV  STL  BLK   PF  DD2  TD3  +/-  \n",
+      "0    0.2  0.5  0.0  0.6  1.0    0    0 -0.2  \n",
+      "1    1.9  1.0  0.4  0.1  1.4    0    0 -0.5  \n",
+      "2    1.9  1.1  0.8  0.5  2.2    7    0 -2.0  \n",
+      "3    0.6  0.0  0.0  0.0  0.4    0    0 -1.0  \n",
+      "4    0.4  0.4  0.4  0.4  1.8    0    0  0.6  \n",
+      "5    5.0  1.7  0.8  1.3  2.0    8    0  3.2  \n",
+      "6    0.9  0.5  0.3  0.2  1.9    1    0 -1.5  \n",
+      "7    1.6  1.5  1.0  0.7  1.7    4    0  0.4  \n",
+      "8    0.4  0.2  0.1  0.0  1.2    0    0 -2.6  \n",
+      "9    0.5  0.8  0.6  0.7  2.7   15    0  0.0  \n",
+      "10   0.7  0.8  0.4  0.1  1.2    0    0  0.0  \n",
+      "11   0.6  0.5  0.5  0.1  1.7    0    0  0.0  \n",
+      "12   0.6  1.3  0.5  1.3  3.1   11    0 -5.2  \n",
+      "13   0.8  0.5  0.5  0.3  2.3    0    0 -6.0  \n",
+      "14   0.3  0.8  0.5  0.6  2.0    1    0 -1.5  \n",
+      "15   1.2  0.8  0.7  0.3  2.2    0    0 -1.5  \n",
+      "16   0.5  0.3  0.4  0.1  1.1    0    0 -1.4  \n",
+      "17   1.8  1.0  0.6  0.8  2.6    0    0  2.6  \n",
+      "18   0.7  0.6  0.2  0.2  1.1    0    0 -2.1  \n",
+      "19   1.1  1.9  1.5  1.1  2.9   49    0 -3.4  \n",
+      "20   3.4  0.8  1.0  0.5  1.3    0    0  6.9  \n",
+      "21   1.0  0.6  1.2  1.0  2.6    2    0  1.8  \n",
+      "22   1.8  1.6  0.5  0.9  3.2    0    0 -1.3  \n",
+      "23   2.8  1.2  0.7  0.3  2.7    0    0 -0.4  \n",
+      "24   0.3  0.4  0.4  0.2  1.4    0    0 -3.4  \n",
+      "25   2.3  2.3  1.0  0.4  2.2    1    0 -0.2  \n",
+      "26   0.5  0.5  0.2  0.1  0.8    0    0 -3.0  \n",
+      "27   0.7  0.5  0.5  0.1  1.4    0    0  0.4  \n",
+      "28   2.1  2.4  1.3  2.2  2.2   49    0  0.7  \n",
+      "29   0.5  0.1  0.5  0.0  0.9    0    0  0.4  \n",
+      "..   ...  ...  ...  ...  ...  ...  ...  ...  \n",
+      "456  1.8  0.8  0.2  0.1  0.9    0    0 -2.8  \n",
+      "457  1.0  0.9  0.4  0.3  1.4    1    0  0.4  \n",
+      "458  1.0  0.8  0.5  1.1  2.3   19    0  1.7  \n",
+      "459  0.7  0.7  0.3  0.1  1.3    0    0  1.3  \n",
+      "460  0.8  1.1  0.9  0.3  2.0    0    0 -2.5  \n",
+      "461  4.8  1.9  1.1  0.1  1.7    3    1 -2.3  \n",
+      "462  1.6  0.8  0.5  0.0  1.1    0    0  0.0  \n",
+      "463  3.2  1.2  1.2  0.6  2.4    0    0  0.5  \n",
+      "464  3.7  1.3  0.8  0.1  1.2    6    0 -2.3  \n",
+      "465  0.8  0.4  0.1  0.4  1.2    1    0  0.0  \n",
+      "466  3.1  1.5  0.9  0.2  1.5    0    0 -3.8  \n",
+      "467  0.6  1.4  0.7  0.5  2.7   12    0 -1.6  \n",
+      "468  2.6  0.6  0.8  0.1  0.8    0    0  0.6  \n",
+      "469  0.4  0.5  0.4  0.1  1.4    0    0 -4.3  \n",
+      "470  2.6  1.8  1.2  0.3  2.3    3    0  2.6  \n",
+      "471  1.8  0.7  0.8  0.5  2.2    0    0  2.2  \n",
+      "472  1.8  1.2  0.5  0.2  1.2    0    0 -4.2  \n",
+      "473  1.1  0.5  0.6  0.1  1.1    0    0  1.4  \n",
+      "474  0.9  0.9  0.4  0.1  1.3    0    0 -3.0  \n",
+      "475  0.3  0.3  0.4  0.4  1.2    0    0 -0.8  \n",
+      "476  2.9  1.4  1.1  0.2  2.2    0    0 -2.7  \n",
+      "477  3.4  1.6  0.8  0.5  1.8    2    0 -1.3  \n",
+      "478  1.1  0.9  0.7  0.6  2.0    8    0 -2.7  \n",
+      "479  0.4  0.4  0.3  0.7  1.9    4    0  0.5  \n",
+      "480  1.3  1.4  0.6  0.5  2.1   11    0 -0.8  \n",
+      "481  2.0  1.6  0.7  0.4  2.4    9    0 -0.5  \n",
+      "482  3.7  1.5  0.9  0.2  2.0    0    0 -2.6  \n",
+      "483  3.0  1.8  0.9  0.2  2.2    0    0 -2.5  \n",
+      "484  1.7  1.4  0.5  0.1  1.9   20    0  1.0  \n",
+      "485  1.9  1.2  0.8  0.5  2.4    4    0  6.0  \n",
+      "\n",
+      "[486 rows x 22 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('player_traditional.csv')\n",
+    "# print(df.columns)\n",
+    "# print(df.index)\n",
+    "# print(df)\n",
+    "X = df.iloc[:,2:]\n",
+    "print(X)"
+   ]
   }
  ],
  "metadata": {
