--- a/Python_Scikit-learn_NBA_unsupervised.ipynb
+++ b/Python_Scikit-learn_NBA_unsupervised.ipynb
@@ -26,6 +26,7 @@
     "<ol>\n",
     "    <li><a href='http://mnemstudio.org/clustering-k-means-example-1.htm'>k-Means: Step-By-Step</li>\n",
     "    <li><a href='https://www.datascience.com/blog/introduction-to-k-means-clustering-algorithm-learn-data-science-tutorials'>Introduction to K-means Clusting</a></li>\n",
+    "    <li><a href='https://www.naftaliharris.com/blog/visualizing-k-means-clustering/'>Visualizing K-Means Clustering</a></li>\n",
     "</ol>"
    ]
   },
@@ -73,17 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['PLAYER', 'Conference', 'MIN', 'PTS', 'FGM', 'FGA', 'FG%', '3PM', '3PA',\n",
-      "       '3P%', 'FTM', 'FTA', 'FT%', 'OREB', 'DREB', 'REB', 'AST', 'TOV', 'STL',\n",
-      "       'BLK', 'PF', 'DD2', 'TD3', '+/-'],\n",
-      "      dtype='object')\n",
       "      MIN   PTS   FGM   FGA   FG%  3PM  3PA   3P%  FTM  FTA ...   DREB   REB  \\\n",
       "0     7.4   2.2   0.8   1.9  40.5  0.2  0.5  50.0  0.4  0.9 ...    1.3   1.6   \n",
       "1    13.7   5.0   1.9   4.6  40.3  0.7  2.0  37.5  0.5  0.6 ...    0.8   1.1   \n",
@@ -215,13 +214,131 @@
     }
    ],
    "source": [
+    "# Load data file as pandas dataframe\n",
     "df = pd.read_csv('player_traditional.csv')\n",
-    "# print(df.columns)\n",
-    "# print(df.index)\n",
-    "# print(df)\n",
     "X = df.iloc[:,2:]\n",
     "print(X)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 19.89958848   8.42674897   3.12016461   6.91399177  44.03703704\n",
+      "   0.768107     2.1845679   27.71769547   1.42489712   1.86069959\n",
+      "  71.82798354   0.85144033   2.71522634   3.56522634   1.83024691\n",
+      "   1.09814815   0.62530864   0.39259259   1.68024691   4.17901235\n",
+      "   0.24074074  -0.34032922]\n",
+      "MIN     19.899588\n",
+      "PTS      8.426749\n",
+      "FGM      3.120165\n",
+      "FGA      6.913992\n",
+      "FG%     44.037037\n",
+      "3PM      0.768107\n",
+      "3PA      2.184568\n",
+      "3P%     27.717695\n",
+      "FTM      1.424897\n",
+      "FTA      1.860700\n",
+      "FT%     71.827984\n",
+      "OREB     0.851440\n",
+      "DREB     2.715226\n",
+      "REB      3.565226\n",
+      "AST      1.830247\n",
+      "TOV      1.098148\n",
+      "STL      0.625309\n",
+      "BLK      0.392593\n",
+      "PF       1.680247\n",
+      "DD2      4.179012\n",
+      "TD3      0.240741\n",
+      "+/-     -0.340329\n",
+      "dtype: float64\n",
+      "[  8.19322221e+01   3.66232351e+01   4.64864689e+00   2.04286108e+01\n",
+      "   1.01768505e+02   5.69661849e-01   3.76266308e+00   2.20456724e+02\n",
+      "   2.03923610e+00   2.98345548e+00   3.52375349e+02   5.75707802e-01\n",
+      "   3.23972701e+00   5.88543688e+00   3.11272710e+00   6.09564472e-01\n",
+      "   1.68310090e-01   1.73895748e-01   5.42778540e-01   9.56778311e+01\n",
+      "   5.17866941e+00   7.85133652e+00]\n",
+      "[  9.05164195   6.0517134    2.1560721    4.51980208  10.08803771\n",
+      "   0.75475946   1.93975851  14.84778515   1.42801824   1.72726821\n",
+      "  18.77166345   0.75875411   1.79992417   2.42599194   1.76429224\n",
+      "   0.7807461    0.41025613   0.41700809   0.73673505   9.78150454\n",
+      "   2.275669     2.80202365]\n",
+      "MIN      9.060969\n",
+      "PTS      6.057949\n",
+      "FGM      2.158294\n",
+      "FGA      4.524459\n",
+      "FG%     10.098432\n",
+      "3PM      0.755537\n",
+      "3PA      1.941757\n",
+      "3P%     14.863084\n",
+      "FTM      1.429490\n",
+      "FTA      1.729048\n",
+      "FT%     18.791006\n",
+      "OREB     0.759536\n",
+      "DREB     1.801779\n",
+      "REB      2.428492\n",
+      "AST      1.766110\n",
+      "TOV      0.781551\n",
+      "STL      0.410679\n",
+      "BLK      0.417438\n",
+      "PF       0.737494\n",
+      "DD2      9.791583\n",
+      "TD3      2.278014\n",
+      "+/-      2.804911\n",
+      "dtype: float64\n",
+      "[[-1.38091946 -1.02892331 -1.07610715 ..., -0.42723615 -0.105789\n",
+      "   0.05008138]\n",
+      " [-0.68491314 -0.56624442 -0.56592013 ..., -0.42723615 -0.105789   -0.0569841 ]\n",
+      " [ 0.97224477  0.70612251  0.82549901 ...,  0.28840018 -0.105789\n",
+      "  -0.59231148]\n",
+      " ..., \n",
+      " [ 1.91130091  1.73062575  1.75311178 ..., -0.42723615 -0.105789\n",
+      "  -0.77075395]\n",
+      " [ 0.50824055  0.93746195  1.2893054  ...,  1.61743907 -0.105789\n",
+      "   0.47834329]\n",
+      " [-0.19881348 -0.38447772 -0.38039758 ..., -0.01830111 -0.105789\n",
+      "   2.26276792]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Standardize\n",
+    "sc = StandardScaler()\n",
+    "sc.fit(X)\n",
+    "\n",
+    "# X's mean values of each feature\n",
+    "X_mean = X.mean(axis = 0)\n",
+    "print(sc.mean_)\n",
+    "print(X_mean)\n",
+    "\n",
+    "# X's variances of each feature which are used to compute scale_\n",
+    "print(sc.var_)\n",
+    "\n",
+    "# X's standard deviations of each feature\n",
+    "X_std = X.std(axis = 0)\n",
+    "print(sc.scale_)\n",
+    "print(X_std)\n",
+    "\n",
+    "# Transform X \n",
+    "X_train_std = sc.transform(X)\n",
+    "print(X_train_std)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
