Kmeans NBA practice

--- a/Python_Scikit-learn_NBA_unsupervised.ipynb
+++ b/Python_Scikit-learn_NBA_unsupervised.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -333,12 +333,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'sklearn.cluster.k_means_.KMeans'>\n",
+      "[1 1 0 1 1 0 1 0 1 0 1 1 0 0 1 0 1 0 1 2 0 0 0 0 1 2 1 1 2 1 0 1 1 1 0 0 0\n",
+      " 1 1 1 1 0 2 1 1 1 0 1 2 1 1 0 0 0 1 1 1 1 2 1 1 0 1 2 0 1 1 0 2 1 0 1 1 1\n",
+      " 1 1 2 1 0 0 1 1 0 0 1 0 1 1 1 2 1 1 2 0 0 1 1 0 1 0 1 0 1 1 1 2 1 1 2 2 0\n",
+      " 1 1 1 2 1 0 0 1 0 1 2 1 0 1 1 0 0 0 1 1 1 1 2 2 0 2 0 1 1 0 1 0 0 2 0 0 0\n",
+      " 0 0 1 0 0 1 1 0 1 1 1 0 2 1 2 2 0 0 1 0 2 1 1 1 0 0 1 1 2 0 0 1 0 0 0 0 1\n",
+      " 2 0 0 1 1 0 0 0 0 2 0 1 1 1 0 1 1 1 1 1 1 1 1 1 0 2 1 1 0 0 1 0 2 0 0 0 0\n",
+      " 0 1 1 1 2 1 0 1 1 2 1 0 1 0 1 1 0 0 1 1 1 1 1 1 1 0 2 1 0 1 0 1 0 0 0 1 2\n",
+      " 2 1 0 0 2 0 0 0 2 2 1 1 0 2 0 1 1 2 1 0 2 0 1 1 2 2 1 1 1 1 0 1 1 2 1 0 1\n",
+      " 0 1 1 0 1 0 1 1 1 0 2 1 0 0 1 0 0 1 1 0 0 0 1 0 0 0 0 0 1 1 1 0 0 1 0 2 1\n",
+      " 1 1 1 1 1 1 1 0 0 2 0 0 0 1 0 2 1 1 0 2 0 2 1 0 1 1 1 1 0 0 1 1 1 0 1 0 0\n",
+      " 0 2 2 1 1 1 1 1 1 0 1 1 1 1 1 0 1 0 1 1 0 2 0 0 0 0 1 1 0 1 1 2 2 2 0 1 1\n",
+      " 1 1 0 1 0 0 0 1 1 1 0 1 0 0 0 0 1 1 2 1 1 0 0 0 0 0 1 0 0 1 0 0 1 1 1 0 0\n",
+      " 1 0 1 0 1 1 0 0 0 1 0 0 1 1 0 1 1 0 1 0 1 1 0 0 1 1 0 0 1 0 1 1 0 0 0 1 0\n",
+      " 0 0 0 0 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Normal Kmeans method\n",
+    "\n",
+    "km = KMeans(n_clusters=3, init='random', max_iter=300, tol=1e-04, random_state=0)\n",
+    "y_km = km.fit(X_train_std)\n",
+    "y_km.predict(X_train_std)\n",
+    "y_2_km = km.fit_predict(X_train_std)\n",
+    "print(type(y_km))\n",
+    "print(y_2_km)"
+   ]
   }
  ],
  "metadata": {
