NBA hierarchical clustering

--- a/Python_Scikit-learn_NBA_unsupervised.ipynb
+++ b/Python_Scikit-learn_NBA_unsupervised.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "<h5>Example:</h5>\n",
     "<p>With <mark>max_inter=300</mark> and <mark>n_init=15</mark>, kmeans will choose initial centroids 15 times, and each run will use up to 300 iterations. The best out of those 10 runs will be the final result.</p>\n",
-    "<p>The centroids are chosen by weighted probability where the probability is propotional to <mark>D(x)^2</mark>  (the distance between new dat a point which is the candidate of new centroid and the nearest centroid that has already been chosen)</p>\n",
+    "<p>The centroids are chosen by weighted probability where the probability is propotional to <mark>D(x)^2</mark>  (the distance between new dat a point which is the candidate of new centroid and the nearest centroid that has already been chosen, k-means++)</p>\n",
     "    \n",
     "<h5>Reference:</h5>\n",
     "<ol>\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -398,13 +398,73 @@
    "source": [
     "#Normal Kmeans method\n",
     "\n",
-    "km = KMeans(n_clusters=3, init='random', max_iter=300, tol=1e-04, random_state=0)\n",
-    "y_km = km.fit(X_train_std)\n",
+    "km_norm = KMeans(n_clusters=3, init='random', max_iter=300, tol=1e-04, random_state=0)\n",
+    "y_km = km_norm.fit(X_train_std)\n",
     "y_km.predict(X_train_std)\n",
-    "y_2_km = km.fit_predict(X_train_std)\n",
+    "y_2_km = km_norm.fit_predict(X_train_std)\n",
     "print(y_km.labels_)\n",
     "print(y_2_km)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 2 0 0 2 0 2 0 2 0 0 2 2 0 2 0 2 0 1 2 2 2 2 0 1 0 0 1 0 2 0 0 0 0 2 2\n",
+      " 0 0 0 0 2 1 0 0 0 2 0 1 0 0 2 2 2 0 0 0 0 1 0 0 2 0 1 2 0 0 2 1 0 2 0 0 0\n",
+      " 0 0 1 0 2 2 0 0 2 2 0 2 0 0 0 1 0 0 1 2 2 0 0 2 0 2 0 2 0 0 0 1 0 0 1 1 2\n",
+      " 0 0 0 1 0 2 2 0 2 0 1 0 2 0 0 2 2 2 0 0 0 0 1 1 2 1 2 0 0 2 0 2 2 1 2 2 2\n",
+      " 2 2 0 2 2 0 0 2 0 0 0 2 1 0 1 1 2 2 0 2 1 0 0 0 2 2 0 0 1 2 2 0 2 2 2 2 0\n",
+      " 1 2 2 0 0 2 2 2 2 1 2 0 0 0 2 0 0 0 0 0 0 0 0 0 2 1 0 0 2 2 0 2 1 2 2 2 2\n",
+      " 2 0 0 0 1 0 2 0 0 1 0 2 0 2 0 0 2 2 0 0 0 0 0 0 0 2 1 0 2 0 2 0 2 2 2 0 1\n",
+      " 1 0 2 2 1 2 2 2 1 1 0 0 2 1 2 0 0 1 0 2 1 2 0 0 1 1 0 0 0 0 2 0 0 1 0 2 0\n",
+      " 2 0 0 2 0 2 0 0 0 2 1 0 2 2 0 2 2 0 0 2 2 2 0 2 2 2 2 2 0 0 0 2 2 0 2 1 0\n",
+      " 0 0 0 0 0 0 0 2 2 1 2 2 2 0 2 1 0 0 2 1 2 1 0 2 0 0 0 0 2 2 0 0 0 2 0 2 2\n",
+      " 2 1 1 0 0 0 0 0 0 2 0 0 0 0 0 2 0 2 0 0 2 1 2 2 2 2 0 0 2 0 0 1 1 1 2 0 0\n",
+      " 0 0 2 0 2 2 2 0 0 0 2 0 2 2 2 2 0 0 1 0 0 2 2 2 2 2 0 2 2 0 2 2 0 0 0 2 2\n",
+      " 0 2 0 2 0 0 2 2 2 0 2 2 0 0 2 0 0 2 0 2 0 0 2 2 0 0 2 2 0 2 0 0 2 2 2 0 2\n",
+      " 2 2 2 2 2]\n",
+      "[0 0 2 0 0 2 0 2 0 2 0 0 2 2 0 2 0 2 0 1 2 2 2 2 0 1 0 0 1 0 2 0 0 0 0 2 2\n",
+      " 0 0 0 0 2 1 0 0 0 2 0 1 0 0 2 2 2 0 0 0 0 1 0 0 2 0 1 2 0 0 2 1 0 2 0 0 0\n",
+      " 0 0 1 0 2 2 0 0 2 2 0 2 0 0 0 1 0 0 1 2 2 0 0 2 0 2 0 2 0 0 0 1 0 0 1 1 2\n",
+      " 0 0 0 1 0 2 2 0 2 0 1 0 2 0 0 2 2 2 0 0 0 0 1 1 2 1 2 0 0 2 0 2 2 1 2 2 2\n",
+      " 2 2 0 2 2 0 0 2 0 0 0 2 1 0 1 1 2 2 0 2 1 0 0 0 2 2 0 0 1 2 2 0 2 2 2 2 0\n",
+      " 1 2 2 0 0 2 2 2 2 1 2 0 0 0 2 0 0 0 0 0 0 0 0 0 2 1 0 0 2 2 0 2 1 2 2 2 2\n",
+      " 2 0 0 0 1 0 2 0 0 1 0 2 0 2 0 0 2 2 0 0 0 0 0 0 0 2 1 0 2 0 2 0 2 2 2 0 1\n",
+      " 1 0 2 2 1 2 2 2 1 1 0 0 2 1 2 0 0 1 0 2 1 2 0 0 1 1 0 0 0 0 2 0 0 1 0 2 0\n",
+      " 2 0 0 2 0 2 0 0 0 2 1 0 2 2 0 2 2 0 0 2 2 2 0 2 2 2 2 2 0 0 0 2 2 0 2 1 0\n",
+      " 0 0 0 0 0 0 0 2 2 1 2 2 2 0 2 1 0 0 2 1 2 1 0 2 0 0 0 0 2 2 0 0 0 2 0 2 2\n",
+      " 2 1 1 0 0 0 0 0 0 2 0 0 0 0 0 2 0 2 0 0 2 1 2 2 2 2 0 0 2 0 0 1 1 1 2 0 0\n",
+      " 0 0 2 0 2 2 2 0 0 0 2 0 2 2 2 2 0 0 1 0 0 2 2 2 2 2 0 2 2 0 2 2 0 0 0 2 2\n",
+      " 0 2 0 2 0 0 2 2 2 0 2 2 0 0 2 0 0 2 0 2 0 0 2 2 0 0 2 2 0 2 0 0 2 2 2 0 2\n",
+      " 2 2 2 2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# k-means++ method\n",
+    "km_pp = KMeans(n_clusters=3, init='k-means++',n_init=10, max_iter= 300, tol=1e-04)\n",
+    "y_km_pp = km_pp.fit(X_train_std)\n",
+    "y_km_pp.predict(X_train_std)\n",
+    "y_km_pp_2 = km_pp.fit_predict(X_train_std)\n",
+    "\n",
+    "print(y_km_pp.labels_)\n",
+    "print(y_km_pp_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
